# SecondLaboratorySort

./: .gitignore  CMakeLists.txt  CMakeListsDoNotWork.txt  ReadMe.txt  TerminalCommand.sh  Time Functions
.cache/clangd/index/: AbstractSorter.h.CA94BD4FCAFA6910.idx  ArraySequence.h.2102760B28539962.idx  BubbleSorter.h.7EAFA28FE4AAAF6B.idx  Comporators.cpp.12C9D8BB18B34501.idx  Comporators.h.10970482F3F101B4.idx  DynamicArray.h.4BDB6AD08630C295.idx  FileTest.h.AB235EE48430E1C1.idx  GenerateArraySequenceInt.cpp.54CB4FB5AA1A3B2B.idx  GenerateArraySequenceInt.h.D0BD0DBF1291B43D.idx  GenerateArraySequencePerson.cpp.75C48796AE9A787E.idx  GenerateArraySequencePerson.h.3D5F93F647E427F5.idx  GenerateListSequenceInt.cpp.2440DB84AC568718.idx  GenerateListSequencePerson.cpp.DDA4465120B88155.idx  GetNamesAndSournamesToMyString.cpp.8131FC4FC38D66C6.idx  LinkedList.h.C8C8A01F006B2A83.idx  ListSequence.h.D830D6F67E5D9E01.idx  LoadTestDynamicArrayIntFile.cpp.AC176B29EAFCAD22.idx  LoadTestFromFileInt.cpp.A493486DA8BDAA45.idx  LoadTestFromFilePerson.cpp.E1518519A175131C.idx  MyString.cpp.1790F5FCD667E7BE.idx  MyString.h.FB58EACEAC8E9443.idx  Person.cpp.13C8E9375BF355C5.idx  Person.h.073B5A8C5D72C9B7.idx  PiramidSorter.h.91C9A7E57D5E098F.idx  PrintSeq.h.61F8C1EC734F025B.idx  QuickSorter.h.45A6D314A4A6A08E.idx  Sequence.h.63988B87C3671DFE.idx  StartLoadTests.cpp.4D8C404475278310.idx  StartLoadTests.h.3648A74696589A7A.idx  WriteIntToFile.cpp.1B64A7BE329E2BCC.idx  WritePersonToFile.cpp.7CAA909CFC532E3F.idx  main.cpp.43390F041AA2E3F0.idx  realtimeplot.h.E5A4CE80311B3C9A.idx
DataToTests/: Time Functions2
Declaration/Sequence/: ArraySequence.h  DynamicArray.h  LinkedList.h
Declaration/Sorter/: AbstractSorter.h  BitonicSorter.h  BubbleSorter.h  InsertionSorter.h  MergeSorter.h  PiramidSorter.h  QuickSorter.h  ShellSorter.h
Declaration/TypesOfData/: Comporators.h  MyString.h  Person.h
Definition/: main.cpp
Definition/TypesOfData/: CMakeLists.txt  Comporators.cpp  MyString.cpp  Person.cpp
Qt/GUI_Second_Laboratory/: CMakeLists.txt  classtosortint.cpp  sortertablemodel.cpp  uiclass.cpp  uiclassprintgraphics.cpp  uiclassprintgraphics.h
Tests/FunctionsForTests/: CMakeLists.txt
Tests/FunctionsForTests/Declaration/: CheckCorrectlySorted.h  GenerateArraySequenceInt.h  GenerateArraySequencePerson.h  GenerateArraySequenceReversedSorted.h  GenerateArraySequenceSortedInt.h  GenerateListSequenceInt.h  GenerateListSequencePerson.h  WriteIntToFile.h  WritePersonToFile.h
Tests/FunctionsForTests/Definition/: GenerateArraySequenceInt.cpp  GenerateArraySequencePerson.cpp  GenerateArraySequenceReversedSorted.cpp  GenerateArraySequenceSortedInt.cpp  GenerateListSequenceInt.cpp  GenerateListSequencePerson.cpp  GetNamesAndSournamesToMyString.cpp  WriteIntToFile.cpp  WritePersonToFile.cpp
Tests/LoadTests/: CMakeLists.txt  main.cpp
Tests/LoadTests/Declaration/: LoadTestDynamicArrayIntFile.h  LoadTestFromFileInt.h  LoadTestFromFilePerson.h  LoadTestInt.h  LoadTestsReversedSorted.h  LoadTestsSorted.h  StartLoadTests.h  StartLoadTestsIntFromFile.h  StartLoadTestsPersonFromFile.h
Tests/LoadTests/Definition/: LoadTestDynamicArrayIntFile.cpp  LoadTestFromFileInt.cpp  LoadTestFromFilePerson.cpp  LoadTestInt.cpp  LoadTestsReversedSorted.cpp  LoadTestsSorted.cpp  StartLoadTests.cpp  StartLoadTestsIntFromFile.cpp  StartLoadTestsPersonFromFile.cpp
Tests/LoadTests/Ploat/: CMakeLists.txt
Tests/LoadTests/Ploat/Declaration/: realtimeplot.h
Tests/LoadTests/Ploat/Definition/: main.cpp  realtimeplot.cpp
Tests/LoadTests/ShowGraphics/: CMakeLists.txt  ShowPlotLoadTestsAllSorters.cpp  ShowPlotLoadTestsAllSorters.h  main.cpp
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/Declaration/: UnitTestBitonicSorter.h  UnitTestBubbleSorter.h  UnitTestInsertionSorter.h  UnitTestMergeSorter.h  UnitTestPiramidSorter.h  UnitTestQuickSorter.h  UnitTestShellSorter.h  UnitTests.h  UnitTests2.h
Tests/UnitTests/Definition/: UnitTestBitonicSorter.cpp  UnitTestBubbleSorter.cpp  UnitTestInsertionSorter.cpp  UnitTestMergeSorter.cpp  UnitTestPiramidSorter.cpp  UnitTestQuickSorter.cpp  UnitTestShellSorter.cpp  UnitTests.cpp  UnitTests2.cpp
